fixed anchor jumps

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1150,13 +1150,13 @@ footer {
 
 #timeline-placeholder {
   display: none;
-  height: 93px;
+  height: 75px;
 }
 
 .event {
   border-top: .5px solid rgba(0,0,0,0.2);
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   overflow: auto;
 }
 
@@ -1261,4 +1261,11 @@ svg {
 path.domain {
   stroke-width: 2px;
   stroke: rgba(0,0,0,0.2);
+}
+
+.event-anchor {
+  display: block;
+  height: 113px;
+  margin-top: -113px;
+  visibility: hidden;
 }
